# CifraNote

./: .conf  .gitignore  README.md  askingpopup.py  cache  cifra.py  cifranote_remake.py  cifranotescreenmanager.kv  conf  config.ini  control.py  create_tutorial.py  data.db  editpage.kv  editpage.py  filebuttons.py  filemanager.py  files.json  load.bat  main.py  mainpage.kv  mainpage.py  pyproject.toml  requirements.txt  save.bat  style.kv  times.py  tone_changer.py  tonechanger.py  tonedrop.py  tutorialpage.kv  tutorialpage.py
Source/: askingpopup.py  cifranote.kv  editpage.py  filemanager.py  main.py  tone_changer.py
Source/cifras/: Evidências  Tutorial
assets/: data.db
cifranote/: components.py  control.py  models.py  tonechanger.py  view.py
cifranote/__pycache__/: components.cpython-311.pyc.1808947416688  mainpage.cpython-311.pyc.2891132309296
cifranote/components/: __init__.py  app_bar.py  bottom_menu.py  custom_modal.py  custom_tab.py  custom_text_field.py  delete_dialog.py  font_dialog.py  new_dialog.py  notes_dialog.py  (+3 more)
cifras/: Nota geral  Nova cifra  Nova cifra (1)  Tutorial  __Tutorial__
control/: __init__.py  control.py
data/: icon.pngZone.Identifier  presplash.pngZone.Identifier
files/: Nota Geral  Tutorial  indio  vacalo
model/: __init__.py  filemanager.py  tonechanger.py
view/: __init__.py  actionbuttons.kv  actionbuttons.py  createfilebutton.kv  filearea.kv  filearea.py  filepage.kv  mainpage.kv  mainpage.py  optionsbar.kv  optionsbar.py  optionsbutton.kv  optionsbutton.py  popups.kv  popups.py  redoundobuttons.kv  tonebuttons.kv
